# rosplan_demos

rosplan_demos_interfaces/rosplan_interface_kbs/: CMakeLists.txt  package.xml  setup.py
rosplan_demos_interfaces/rosplan_interface_kbs/scripts/: rosplan_interface_movebase  rosplan_interface_perceive  rosplan_interface_pick  rosplan_interface_place_object
rosplan_demos_interfaces/rosplan_interface_kbs/src/rosplan_interface_kbs/: rosplan_interface_movebase.py  rosplan_interface_perceive.py  rosplan_interface_pick.py  rosplan_interface_place_object.py
rosplan_demos_interfaces/rosplan_interface_movebase_py/scripts/: rpmovebase
rosplan_demos_interfaces/rosplan_interface_movebase_py/src/rosplan_interface_movebase_py/: rosplan_interface_movebase.py
rosplan_htn_demo/data/domain/mobipick/: adapt_arm.hddl  chimp_move_object_problem.pdl  domain.ddl  domain.hddl  drive.hddl  get.hddl  get_object.hddl  handover.hddl  m_mobipick_adapt_arm1.pdl  m_mobipick_adapt_arm2.pdl  m_mobipick_adapt_arm3.pdl  m_mobipick_drive1.pdl  m_mobipick_drive2.pdl  m_mobipick_drive3.pdl  m_mobipick_get_object1.pdl  m_mobipick_get_object2.pdl  (+20 more)
rosplan_htn_demo/launch/: interfaced_htn_planning_system.launch  mobipick_actions.launch
rosplan_htn_demo/scripts/: fill_initial_knowledge_drive.bash
rosplan_kbs_demo/: CMakeLists.txt  README.md  package.xml
rosplan_kbs_demo/common/: domain_kbs_demo.pddl  initial_state_problem.pddl
rosplan_kbs_demo/common/example_problems/: perceive.pddl  pick.pddl  transport.pddl
rosplan_kbs_demo/launch/: rosplan_mobipick.launch
rosplan_kbs_demo/scripts/: run.sh
